--- a/package.json
+++ b/package.json
@@ -20,15 +20,21 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/camera": "^4.16.0",
     "@ionic-native/core": "^4.16.0",
+    "@ionic-native/file": "^4.16.0",
+    "@ionic-native/file-transfer": "^4.16.0",
+    "@ionic-native/geolocation": "^4.16.0",
     "@ionic-native/google-maps": "^4.14.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.2.0",
     "cordova-android": "7.1.1",
+    "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-googlemaps": "2.4.6",
+    "cordova-plugin-geolocation": "4.0.1",
+    "cordova-plugin-googlemaps": "^2.4.6",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -48,7 +54,9 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-googlemaps": {
-        "API_KEY_FOR_ANDROID": "AIzaSyCnXweoB6ipbEMcVA4JIjVojBMZx_2JT1U"
+        "API_KEY_FOR_ANDROID": "AIzaSyCnXweoB6ipbEMcVA4JIjVojBMZx_2JT1U",
+        "PLAY_SERVICES_VERSION": "15.0.1",
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
@@ -57,7 +65,11 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {}
     },
     "platforms": [
       "android"
